gccida/c2/print_mem_expr
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_mem_expr/src/print-rtl.c:550:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_mem_expr/src/print-rtl.c:573:19: error: use of undeclared identifier 'off_6763D0'
fprintf( outfile, off_6763D0, name->int_cst.int_cst.low); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_mem_expr/src/print-rtl.c:584:22: error: use of undeclared identifier 'unk_700E66'
v8 = ( const char *)&unk_700E66; 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_mem_expr/src/obj/print-rtl.o] Error 1
